# Github-workflow

./: README.md  pyproject.toml
.github/workflows/: github-actions-demo.yml
scripts/: get_blobs.py  load_blobs.py
